@@ -73,18 +73,21 @@ win32_demo:
 install: $(PREFIX) all
 	cp --no-dereference $(STAGE)/libax* $(PREFIX)/lib
 	chmod 755 $(PREFIX)/lib/libax* 
-	-install -m 755 $(STAGE)/ax* $(PREFIX)/bin 
-ifdef CONFIG_AXHTTPD
-	-install -m 755 $(STAGE)/htpasswd $(PREFIX)/bin 
+	install -m 755 $(STAGE)/ax* $(PREFIX)/bin 
+ifdef CONFIG_HTTP_HAS_AUTHORIZATION
+	install -m 755 $(STAGE)/htpasswd $(PREFIX)/bin 
+endif
+ifdef CONFIG_PLATFORM_CYGWIN
+	install -m 755 $(STAGE)/cygaxtls.dll $(PREFIX)/bin 
 endif
 ifdef CONFIG_PERL_BINDINGS 
-	-install -m 755 $(STAGE)/axtlsp.pm `perl -e 'use Config; print $$Config{installarchlib};'`
+	install -m 755 $(STAGE)/axtlsp.pm `perl -e 'use Config; print $$Config{installarchlib};'`
 endif
 	@mkdir -p -m 755 $(PREFIX)/include/axTLS
-	-install -m 644 ssl/*.h $(PREFIX)/include/axTLS
+	install -m 644 ssl/*.h $(PREFIX)/include/axTLS
 	-rm $(PREFIX)/include/axTLS/cert.h
 	-rm $(PREFIX)/include/axTLS/private_key.h
-	-install -m 644 config/config.h $(PREFIX)/include/axTLS
+	install -m 644 config/config.h $(PREFIX)/include/axTLS
 
 installclean:
 	-@rm $(PREFIX)/lib/libax* > /dev/null 2>&1
