@@ -39,7 +39,7 @@ CONFIG_SSL_USE_PKCS12=y
 CONFIG_SSL_EXPIRY_TIME=24
 CONFIG_X509_MAX_CA_CERTS=4
 CONFIG_SSL_MAX_CERTS=2
-# CONFIG_SSLCTX_MUTEXING is not set
+# CONFIG_SSL_CTX_MUTEXING is not set
 CONFIG_USE_DEV_URANDOM=y
 # CONFIG_WIN32_USE_CRYPTO_LIB is not set
 # CONFIG_PERFORMANCE_TESTING is not set
