@@ -30,7 +30,7 @@
 #define BLOCKSIZE 4096
 
 #define INITIAL_CONNECTION_SLOTS 10
-#define CONFIG_HTTP_DEFAULT_SSL_OPTIONS     0
+#define CONFIG_HTTP_DEFAULT_SSL_OPTIONS   0
 
 #define STATE_WANT_TO_READ_HEAD  1
 #define STATE_WANT_TO_SEND_HEAD  2
@@ -52,6 +52,7 @@ struct connstruct
     int reqtype;
     int networkdesc;
     int filedesc;
+    SSL *ssl;
 
 #if defined(CONFIG_HTTP_DIRECTORIES)
 #ifdef WIN32
